content/browser/tracing/tracing_controller_impl.cc
@@ -381,6 +381,7 @@ void TracingControllerImpl::CompleteFlush() {
     trace_data_endpoint_->ReceiveTraceFinalContents(
         std::move(filtered_metadata_));
   }
+  filtered_metadata_.reset(nullptr);
   trace_data_endpoint_ = nullptr;
   trace_config_ = nullptr;
 }
